--- a/main.html
+++ b/main.html
@@ -42,12 +42,14 @@
 </head>
 
 <body>
-    <div id="content">
+    <main>
+        <div id="content">
 
-    </div>
-    <input id="word" />
-    <input id="translation" />
-    <button onClick="writeUserData()">    Add</button>
+        </div>
+        <input id="word" />
+        <input id="translation" />
+        <button onClick="writeUserData()">    Add</button>
+    </main>
 </body>
 
 </html>
