--- a/main.html
+++ b/main.html
@@ -38,10 +38,43 @@
                     document.getElementById("content").innerHTML += str
                 })
         });
+
+        function checkLoginState() {
+            FB.getLoginStatus(function (response) {
+                console.log(response);
+            });
+        }
     </script>
 </head>
 
 <body>
+
+    <script>
+        window.fbAsyncInit = function () {
+            FB.init({
+                appId: '343261666142517',
+                cookie: true,
+                xfbml: true,
+                version: 'v2.11'
+            });
+
+            FB.AppEvents.logPageView();
+
+        };
+
+        (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) { return; }
+            js = d.createElement(s); js.id = id;
+            js.src = "https://connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
+
+    <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+    </fb:login-button>
+
+
     <main>
         <div id="content">
 
