--- a/main.html
+++ b/main.html
@@ -44,6 +44,17 @@
                 console.log(response);
             });
         }
+
+        var provider = new firebase.auth.FacebookAuthProvider();
+        firebase.auth().signInWithPopup(provider).then(function (result) {
+            // This gives you a Facebook Access Token. You can use it to access the Facebook API.
+            var token = result.credential.accessToken;
+            // The signed-in user info.
+            var user = result.user;
+            console.log(user);
+        }).catch(function (error) {
+            console.log(error);
+        });
     </script>
 </head>
 
