--- a/main.html
+++ b/main.html
@@ -29,6 +29,9 @@
                 app.words = [];
                 snapshot
                     .forEach(e => {
+                        if (e.val().removed) {
+                            return;
+                        }
                         app.words.push({
                             orig: e.val().word,
                             trans: e.val().translation,
@@ -46,7 +49,7 @@
             firebase.database().ref('users/' + localStorage.getItem('user') + '/data/');
 
         const remove = (id) => {
-            ref().child(id).remove()
+            ref().child(id).update({removed: true})
         };
     </script>
 </head>
@@ -78,10 +81,8 @@
         <div id="app">
             <section>
                 <h1>Add new word:</h1>
-                <label for="word">Word:</label>
-                <input v-model="original" id="word" />
-                <label for="translation">Translation:</label>
-                <input v-model="translation" id="translation" @keyup.enter="update" />
+                <input v-model="original" id="word" placeholder="Word" />
+                <input v-model="translation" id="translation" @keyup.enter="update" placeholder="Translation" />
             </section>
             <section>
                 <h1>My words:</h1>
