--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                         app.words.push({
                             orig: e.val().word,
                             trans: e.val().translation,
+                            score: e.val().score,
                             remove: "javascript: remove(\"" + e.key + "\")"
                         });
                     })
@@ -104,10 +105,12 @@
                     <tr>
                         <th>Word</th>
                         <th>Translation</th>
+                        <th>Score</th>
                     </tr>
                     <tr v-for="word in words">
                         <td>{{ word.orig }}</td>
                         <td><strong>{{ word.trans }}</strong></td>
+                        <td>{{ word.score }}</td>
                         <td><a :href="word.remove">remove</a></td>
                     </tr>
                 </table>
